tests/golden/expected/native2.stdout.txt
Compile error: /Users/rileypb/dev/lamp/tests/fixtures/native2.lamp:6: type error: native function "compute" has no JavaScript implementation
  6 | native function int compute(int x)
    | ^
